--- a/Perrruna Pagina/public/cuidadores/cuidadores.css
+++ b/Perrruna Pagina/public/cuidadores/cuidadores.css
@@ -141,14 +141,14 @@ body {
   background-color: rgb(212, 247, 236);
   margin-top: 150px; 
 }
-
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2rem;
-  margin: 4rem 5vw;
   padding: 0;
   list-style-type: none;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
@@ -159,11 +159,11 @@ body {
   overflow: hidden;
   text-decoration: none;
 }
-
-.card__image {      
+.card__image {
   width: 100%;
-  height: auto;
+  height: 400px; /* Ajusta la altura según tus necesidades */
 }
+
 
 .card__overlay {
   position: absolute;
