--- a/Perrruna Pagina/public/servicios/servicios.css
+++ b/Perrruna Pagina/public/servicios/servicios.css
@@ -219,122 +219,182 @@ body.dark-mode {
 
 
 
-section.card {
-  background:#f6f6f6;
-  border-radius:24px 24px 24px 48px;
-  padding:48px 48px 48px 308px;
-  margin:84px 0;
-  width:60vw;
-  max-width:920px;
-  min-width:640px;
-  display:flex;
-  flex-direction:row;
-  align-self:flex-start;
-  position:relative;
-  box-shadow:
-  5px 0 0 0 fade(#ccc,30%),
-  -5px 0 0 0 fade(#ccc,30%),
-  0 5px 0 0 fade(#ccc,30%);
-  }
-  
-  section.card .text-content {
-  display:flex;
-  flex-direction:column;
-  width:calc(60vw - 192px);
-  }
-  
-  section.card .text-content h3 {
-  margin:0;
-  font-size:1.5em;
-  max-width:20ch;
-  }
-  
-  section.card .text-content p {
-  margin:16px 0 24px;
-  max-width:36ch;
-  }
-  
-  section.card .text-content a {
-  border:3px solid #000;
-  color:#000;
-  align-self:flex-start;
-  text-decoration:none;
-  padding:16px 32px;
-  border-radius:12px;
-  transition:400ms all;
-  }
-  
-  section.card .text-content a:hover {
-  background:#000;
-  color:white
-  }
-  
-  section.card .visual {
-  width:240px;
-  height:100%;
-  position:absolute;
-  top:-24px;
-  left:24px;
-  overflow:hidden;
-  border-radius:24px;
-  box-shadow:
-  1px 2px 6px fade(white,25%),
-  2px 6px 12px fade(black,25%);
-  }
-  
-  section.card .visual img {
-  height:110%
-  }
-  
-  section.card:nth-of-type(odd) {
-  margin:0 0 0 248px;
-  border-radius:24px 24px 48px 24px;
-  padding:48px 308px 48px 60px;
-  }
-  
-  section.card:nth-of-type(odd) .visual {
-  right:24px;
-  left:auto
-  }
-  
-  section.card:nth-of-type(odd) .text-content a {
-  align-self:flex-start
-  }
-  
-  article {
-  margin:auto;
-  display:block;
-  width:calc(60vw + 248px);
-  max-width:calc(920px + 248px);
-  min-width:calc(640px + 248px);
-  }
 
 
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
-/* Media queries para ajustar los elementos en pantallas pequeñas */
-@media (max-width: 768px) {
-  #logo {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 20px;
-  }
 
-  #menu ul {
-    flex-direction: column;
-  }
-
-  #menu ul li {
-    margin-left: 0;
-    margin-bottom: 10px;
-  }
-
-  article {
-    margin-top: 70px;
-  }
-
-  .card {
-    width: 90%;
-    max-width: 300px;
-  }
+:root {
+  --light: #ffe6e6;
+  --dark: #0c0c0c;
 }
 
+.container {
+
+
+  overflow: clip;
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 2rem 5rem;
+
+  width: 100%;
+  height: 90dvh;
+  margin-top: 50px;
+  background-image: var(--bg-color);
+}
+
+.category_container {
+  --gap: 0.5rem;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: calc(var(--gap) * 2);
+
+  width: 100%;
+  height: 100%;
+}
+
+.content {
+  --active: 0;
+
+  cursor: pointer;
+  overflow: clip;
+
+  position: relative;
+  z-index: 10;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 1.5rem;
+
+  padding: 2.5rem;
+
+  width: calc((100% / 3) - var(--gap));
+  height: 100%;
+
+  border-radius: 1rem;
+
+  transition: width 0.5s ease-in-out;
+}
+.content:hover {
+  --active: 1;
+
+  width: calc(70% - var(--gap));
+}
+.content::before {
+  content: "";
+
+  position: absolute;
+  z-index: -10;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  background-color: var(--dark);
+
+  opacity: 0.6;
+}
+
+.content img {
+  position: absolute;
+  z-index: -20;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  object-fit: cover;
+  object-position: center;
+}
+
+.content .profile_image {
+  opacity: calc(1 - var(--active));
+
+  transition: opacity 0.3s ease-in-out;
+}
+
+.profile_detail {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+
+  width: 12rem;
+  transition: transform 0.5s cubic-bezier(0.23, 0.93, 0.77, 1) 0.01s;
+}
+
+.profile_detail span {
+  font-size: 3rem;
+  font-weight: 900;
+  color: var(--light);
+  text-wrap: nowrap;
+}
+
+.profile_detail p {
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--light);
+}
+
+.profile_quote {
+  width: 22rem;
+  transform: translate(0, calc((1 - var(--active)) * (100% + 2.5rem)));
+}
+
+.profile_quote p {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: var(--light);
+
+  transform: translate(0, calc((1 - var(--active)) * (100% + 2.5rem)));
+
+  transition: transform 0.5s cubic-bezier(0.23, 0.93, 0.77, 1) 0.1s;
+}
+
+.wrapper {
+  display: grid;
+    grid-template-rows: 0fr;
+    overflow: hidden;
+  transition: grid-template-rows 0.5s cubic-bezier(0.23, 0.93, 0.77, 1) 0.01s;
+}
+
+.profile_quote { 
+  min-height: 0; 
+  transform: translateY(50%);
+  opacity: 0;
+  transition: 
+    opacity 0.8s ease-in-out,
+    transform 0.8s cubic-bezier(0.23, 0.93, 0.77, 1) 0.01s
+  ; 
+}
+
+.content:hover .wrapper {
+    grid-template-rows: 1fr;
+}
+.content:hover .profile_quote {
+  transform: none;
+  opacity: 1; 
+}
+dialog { position: absolute; z-index: 1; background: none; color: white; border: 0; font-size: .8rem; padding:.5em;}
+dialog a { color: whitesmoke; }
+
+@media screen and (max-width: 600px) {
+  .content {
+    display: block;
+    margin-bottom: 20px; 
+    width: 90%; 
+  }
+  .category_container {
+    display: block;
+    margin-bottom: 20px;
+    overflow-y: auto;
+  }
+}
