--- a/Perrruna Pagina/public/ubicacion/mapa.css
+++ b/Perrruna Pagina/public/ubicacion/mapa.css
@@ -35,11 +35,10 @@ input[type="submit"] {
 
 /* HEADER */
 #header {
-  background-color: hsl(160, 40%, 38%);
+  background-color: hsl(202, 27%, 50%);
   height: 70px;
   padding-top: 10px;
   position: fixed;
-  background-color: hsl(160, 40%, 38%);
   top: 0;
   left: 0;
   width: 100%;
@@ -91,7 +90,7 @@ input[type="submit"] {
 }
 
 #menu ul li:hover a {
-  color: gold;
+  color: rgb(19, 48, 65);
 }
 
 #menu ul li:hover {
@@ -146,7 +145,7 @@ button:disabled {
 }
 
 #showMapButton {
-  background-color: #4CAF50;
+  background-color:  #446081;
   border-radius: 4px;
   font-size: 16px;
   border: none;
@@ -159,12 +158,12 @@ button:disabled {
 }
 
 #showMapButton:hover {
-  background-color: hsl(160, 40%, 38%);
+  background-color: hsl(193, 43%, 47%);
 }
 
 /* Botones */
 button {
-  background-color: #333;
+  background-color: #446081;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -173,7 +172,7 @@ button {
 }
 
 button:hover {
-  background-color: #666;
+  background-color: hsl(193, 43%, 47%);
 }
 
 button:disabled {
@@ -260,7 +259,7 @@ select {
 }
 
 form input[type=submit] {
-  background-color: hsl(160, 40%, 38%);
+  background-color: #7bafcf;
   color: white;
   padding: 12px 20px;
 }
