--- a/Perrruna Pagina/public/contacto/contacto.css
+++ b/Perrruna Pagina/public/contacto/contacto.css
@@ -36,11 +36,10 @@ input[type="submit"] {
 
 /* HEADER */
 #header {
-  background-color: hsl(160, 40%, 38%);
+  background-color: hsl(202, 27%, 50%);
   height: 70px;
   padding-top: 10px;
   position: fixed;
-  background-color: hsl(160, 40%, 38%);
   top: 0;
   left: 0;
   width: 100%;
@@ -92,7 +91,7 @@ input[type="submit"] {
 }
 
 #menu ul li:hover a {
-  color: gold;
+  color: rgb(19, 48, 65);
 }
 
 #menu ul li:hover {
@@ -150,7 +149,7 @@ body {
   width: 104%;
   height: 102%;
   border-radius: 8px;
-  background-image: linear-gradient(var(--rotate), #c231a0, #fd9bed 43%, #f4b1f9);
+  background-image: linear-gradient(var(--rotate), #3175c2, #6eb7d6 43%, #a9e1e7);
   position: absolute;
   z-index: -1;
   top: -1%;
@@ -175,7 +174,7 @@ body {
   width: 104%;
   height: 102%;
   border-radius: 8px;
-  background-image: linear-gradient(var(--rotate), #c231a0, #fd9bed 43%, #f4b1f9);
+  background-image: linear-gradient(var(--rotate), #3155c2, #6bb8dd 43%, #8ee1de);
   position: absolute;
   z-index: -1;
   left: -2%;
@@ -212,7 +211,7 @@ h1 {
   display: inline-block;
   margin: 10px;
   padding: 12px 24px;
-  background-color: #b20ca9;
+  background-color: #446081;
   color: #fff;
   text-decoration: none;
   font-size: 18px;
@@ -222,7 +221,7 @@ h1 {
 
 .btn-googleplay-app:hover,
 .btn-ios-app:hover {
-  background-color: #f875e6;
+  background-color: #86a3e2;
 }
 
 .switch-container {
@@ -285,6 +284,96 @@ input:checked+.slider:before {
   transform: translateX(26px);
 }
 
+/* Dark Mode */
+body.dark-mode {
+  background-color: #2b2b2b;
+}
+
+.dark-mode #header {
+  background-color: #1a1a1a;
+}
+
+.dark-mode #menu ul li a {
+  color: #fff;
+}
+
+.dark-mode .card {
+  background-color: #1a1a1a;
+}
+
+.dark-mode .card__header {
+  background-color: #2b2b2b;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
+
+.card2 {
+  width: 250px;
+  height: 400px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-left: 250px;
+}
+
+
+
+.formulario-contacto h2 {
+  margin-bottom: 10px;
+  font-size: 24px;
+  color: #333;
+
+}
+
+.formulario-contacto {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.formulario-contacto label {
+  display: block;
+  margin-bottom: 8px;
+  font-size: 16px;
+  color: #666;
+  text-align: left;
+}
+
+.formulario-contacto input[type="text"],
+.formulario-contacto input[type="email"],
+.formulario-contacto textarea {
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  display: block;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.formulario-contacto .campo-input {
+  overflow: hidden;
+}
+
+
+.formulario-contacto input[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background-color: #446081;
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 .card {
   width: 400px;
   padding: 20px;
@@ -295,6 +384,28 @@ input:checked+.slider:before {
   margin-left: 100px;
 }
 
+.ficha-app-description {
+  margin-top: 10px;
+}
+
+.ficha-app-name {
+  font-size: 24px;
+  color: #333;
+}
+
+.ficha-app-buttons {
+  margin-top: 20px;
+}
+
+.ficha-app-buttons .btn-googleplay-app {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: rgb(22, 78, 119);
+  color: #fff;
+  font-size: 16px;
+  text-decoration: none;
+  border-radius: 4px;
+}
 
 
 
@@ -305,82 +416,48 @@ input:checked+.slider:before {
   margin-top: 25px;
 }
 
+.accordion {
+  max-width: 80%;
+  margin: 0 auto;
+  overflow: hidden;
+  margin-bottom: 40px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  margin-bottom: 20px;
+  margin-left: 150px;
+}
 
-/* contact from design */
-.container {
-	padding: 20px 50px 70px;
+
+.accordion-item {
+  background-color: #f9f9f9;
+  color: #333;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  transition: 0.4s;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
-.sec1title {
-	text-align: center;
+
+.accordion-item:hover {
+  background-color: #ddd;
 }
-.sec1title h1 {
-	font-size: 40px;
-	margin: 25px;
-	text-transform: uppercase;
-	color: #16F1D4;
-	font-weight: 400;
+
+.accordion-item.active {
+  background-color: #ccc;
 }
-.section2 {
-  margin-left: 350px;
-	position: relative;
-	overflow: hidden;
-	display: flex;
-	justify-content: center; /* Centra horizontalmente */
-	align-items: center; /* Centra verticalmente */
-	height: 100vh; /* Asegura que la sección ocupe toda la altura de la ventana */
+
+.accordion-content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f9f9f9;
 }
-.section2 .contactform {
-	background: #393939;
-	padding: 30px 40px 70px;
-	box-sizing: border-box;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-.section2 .contactform input.form-fields,
-.section2 .contactform button.form-fields,
-.section2 .contactform textarea.form-fields {
-	padding: 0 0 0 40px;
-	display: block;
-	box-sizing: border-box;
-	width: 350px;
-	font-size: 16px;
-	background: #323232;
-	margin: 7px 0;
-	border: 1px solid #00C1A8;
-	color: #6BECDB;
-	opacity: 0.5;
-	min-height: 45px;
-	text-shadow: none;
-	position: relative;
-}
-.section2 .contactform textarea.form-fields {
-	padding: 8px 40px;
-	resize: none;
-}
-.section2 .contactform button.form-fields.button {
-	color: #16F1D4;
-	font-size: 14px;
-	padding: 0;
-	text-transform: uppercase;
-}
-.section2 .contactform button.form-fields.button:hover {
-	background: #00C1A8;
-	color: #fff;
-	cursor: pointer;
-	opacity: 1;
-}
-.section2 .contactform button.form-fields.button i {
-	margin-left: 10px;
-}
-.section2 .contactform h5 {
-	color: #16F1D4;
-	font-size: 16px;
-	margin-bottom: 15px;
-}
-.section2 .contactform label .cntfrmicn {
-	color: #00C1A8;
-	padding: 14px;
-	position: absolute;
-	z-index: 99;
+
+.accordion-content.show {
+  display: block;
 }
